--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <gson.version>2.4</gson.version>
         <junit.version>4.12</junit.version>
         <biojava-structure.version>4.1.0</biojava-structure.version>
+        <jython-standalone.version>2.7.0</jython-standalone.version>
         <!-- DIRECTORY DEFINITIONS-->
         <build.dir>${project.basedir}/../build</build.dir>
         <plugin.output.reader.structure>${build.dir}/StructureReader</plugin.output.reader.structure>
@@ -33,7 +34,6 @@
         <plugin.output.writer.topology>${build.dir}/TopologyWriter</plugin.output.writer.topology>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
     </properties>
 
     <dependencyManagement>
@@ -83,7 +83,11 @@
                 <artifactId>biojava-structure</artifactId>
                 <version>${biojava-structure.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.python</groupId>
+                <artifactId>jython-standalone</artifactId>
+                <version>${jython-standalone.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
