--- a/MDConverter/pom.xml
+++ b/MDConverter/pom.xml
@@ -40,6 +40,10 @@
             <groupId>org.biojava</groupId>
             <artifactId>biojava-structure</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
