--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.mdconverter</groupId>
     <artifactId>MDConverterCollection</artifactId>
-    <version>${project.version}</version>
+    <version>0.1</version>
     <packaging>pom</packaging>
     <modules>
         <module>MDConverterAPI</module>
