--- a/AmberStructureReader/pom.xml
+++ b/AmberStructureReader/pom.xml
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>org.mdconverter</groupId>
             <artifactId>MDConverterAPI</artifactId>
-            <scope>provided</scope>
+            <version>0.1</version>
         </dependency>
         <dependency>
             <groupId>org.biojava</groupId>
@@ -25,6 +25,11 @@
         <dependency>
             <groupId>org.python</groupId>
             <artifactId>jython-standalone</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
