--- a/GromacsStructureReader/pom.xml
+++ b/GromacsStructureReader/pom.xml
@@ -15,7 +15,6 @@
         <dependency>
             <groupId>org.mdconverter</groupId>
             <artifactId>MDConverterAPI</artifactId>
-            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -49,6 +48,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <minimizeJar>true</minimizeJar>
                     <finalName>GromacsSR</finalName>
                     <outputDirectory>${plugin.output.reader.structure}</outputDirectory>
                 </configuration>
