--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>MDConverterAPI</module>
         <module>MDConverter</module>
         <module>GromacsStructureReader</module>
+        <module>GromacsTopologyReader</module>
         <module>PDBStructureWriter</module>
         <module>AmberStructureReader</module>
     </modules>
@@ -26,7 +27,7 @@
         <gson.version>2.4</gson.version>
         <junit.version>4.12</junit.version>
         <biojava-structure.version>4.1.0</biojava-structure.version>
-        <jython-standalone.version>2.7.0</jython-standalone.version>
+        <jython-standalone.version>2.7.1b2</jython-standalone.version>
         <mockito-all.version>1.10.19</mockito-all.version>
         <jansi.version>1.11</jansi.version>
         <!-- DIRECTORY DEFINITIONS-->
