--- a/PDBStructureWriter/src/main/resources/manifest.json
+++ b/PDBStructureWriter/src/main/resources/manifest.json
@@ -8,6 +8,10 @@
     "script": false,
     "scriptType": "none",
     "measurementUnits": {
-        "length": "Å"
+        "global": {
+            "standard": {
+                "length": "Å"
+            }
+        }
     }
 }
