refactored topology meta model, created Gromacs topology reader/writer

--- a/AmberStructureReader/src/main/resources/manifest.json
+++ b/AmberStructureReader/src/main/resources/manifest.json
@@ -13,7 +13,7 @@
         "length": "Å",
         "mass": "kg",
         "time": "s",
-        "charge": "e",
+        "charge": "C",
         "energy": "kcal/mol"
       }
     }
