--- a/GromacsTopologyReader/src/main/resources/manifest.json
+++ b/GromacsTopologyReader/src/main/resources/manifest.json
@@ -13,7 +13,7 @@
         "length": "nm",
         "mass": "kg",
         "time": "ps",
-        "charge": "e",
+        "charge": "C",
         "temperature": "K",
         "energy": "kJ/mol",
         "force": "kJ/mol/nm"
@@ -21,12 +21,12 @@
     },
     "atom/atomTypes": {
       "none": {
-        "mass": "amu",
-        "charge": "e",
-        "V1": "kJ/mol·nm^6",
-        "W1": "kJ/mol·nm^12",
-        "V": "nm",
-        "W": "kJ/mol"
+        "c1": "amu",
+        "c2": "C",
+        "c3_1": "kJ/mol·nm^6",
+        "c4_1": "kJ/mol·nm^12",
+        "c3": "nm",
+        "c4": "kJ/mol"
       }
     },
     "bond/bondTypes": {
@@ -73,35 +73,35 @@
       "1": {
         "c1_1": "kJ/mol·nm^6",
         "c2_1": "kJ/mol·nm^12",
-        "c1_2": "nm",
-        "c2_2": "kJ/mol"
+        "c1": "nm",
+        "c2": "kJ/mol"
       },
       "2": {
-        "c2": "e",
-        "c3": "e",
+        "c2": "C",
+        "c3": "C",
         "c4_1": "kJ/mol·nm^6",
         "c5_1": "kJ/mol·nm^12",
-        "c4_2": "nm",
-        "c5_2": "kJ/mol"
+        "c4": "nm",
+        "c5": "kJ/mol"
       }
     },
     "pairNB": {
       "1": {
-        "c1": "e",
-        "c2": "e",
+        "c1": "C",
+        "c2": "C",
         "c3_1": "kJ/mol·nm^6",
         "c4_1": "kJ/mol·nm^12",
-        "c3_2": "nm",
-        "c4_2": "kJ/mol"
+        "c3": "nm",
+        "c4": "kJ/mol"
       }
     },
     "angle/angleTypes": {
       "1": {
-        "c1": "deg",
+        "c1": "°",
         "c2": "kJ/mol·rad^2"
       },
       "2": {
-        "c1": "deg",
+        "c1": "°",
         "c2": "kJ/mol"
       },
       "3": {
@@ -116,13 +116,13 @@
         "c4": "kJ/mol·nm^2"
       },
       "5": {
-        "c1": "deg",
+        "c1": "°",
         "c2": "kJ/mol·rad^2",
         "c3": "nm",
         "c4": "kJ/mol·nm^2"
       },
       "6": {
-        "c1": "deg",
+        "c1": "°",
         "c2": "kJ/mol·rad^0",
         "c3": "kJ/mol·rad^1",
         "c4": "kJ/mol·rad^2",
@@ -133,17 +133,17 @@
         "c2": "kJ/mol"
       },
       "10": {
-        "c1": "deg",
+        "c1": "°",
         "c2": "kJ/mol"
       }
     },
     "dihedral/dihedralTypes": {
       "1": {
-        "c1": "deg",
+        "c1": "°",
         "c2": "kJ/mol"
       },
       "2": {
-        "c1": "deg",
+        "c1": "°",
         "c2": "kJ/mol·rad^2"
       },
       "3": {
@@ -155,7 +155,7 @@
         "c6": "kJ/mol"
       },
       "4": {
-        "c1": "deg",
+        "c1": "°",
         "c2": "kJ/mol"
       },
       "5": {
@@ -168,11 +168,11 @@
         "c2": "kJ/mol"
       },
       "9": {
-        "c1": "deg",
+        "c1": "°",
         "c2": "kJ/mol"
       },
       "10": {
-        "c1": "deg",
+        "c1": "°",
         "c2": "kJ/mol"
       },
       "11": {
@@ -189,6 +189,19 @@
       },
       "2": {
         "c1": "nm"
+      }
+    },
+    "nonbond_params": {
+      "1": {
+        "c1_1": "kJ/mol·nm^6",
+        "c2_1": "kJ/mol·nm^12",
+        "c1": "nm",
+        "c2": "kJ/mol"
+      },
+      "2": {
+        "c1": "kJ/mol",
+        "c2": "1/nm",
+        "c3": "kJ·nm^6/mol"
       }
     },
     "settle": {
@@ -218,26 +231,26 @@
     },
     "dihedralRestraint": {
       "1": {
-        "c1": "deg",
-        "c2": "deg"
+        "c1": "°",
+        "c2": "°"
       }
     },
     "orientationRestraint": {
       "1": {
-        "c1": "U·nm^",
+        "c1": "U·nm^'getAlpha'",
         "c2": "U",
         "c3": "1/U"
       }
     },
     "angleRestraint": {
       "1": {
-        "c1": "deg",
+        "c1": "°",
         "c2": "kJ/mol"
       }
     },
     "angleRestraintZ": {
       "1": {
-        "c1": "deg",
+        "c1": "°",
         "c2": "kJ/mol"
       }
     }
